Update test classes to use 'chat' instead of deprecated 'generate'